// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Content /> should not render if no props are passed 1`] = `""`;

exports[`<Content /> should render grouped properties 1`] = `
<div
  className="css-y50mcd engage__product__product-properties"
>
  <GroupedProperties
    groups={
      Array [
        Object {
          "htmlOnly": false,
          "key": "Group 1",
          "label": null,
          "properties": Array [
            Object {
              "displayGroup": "Group 1",
              "label": "Test 1",
              "name": "test1",
            },
            Object {
              "displayGroup": "Group 1",
              "label": "Test 2",
              "name": "test2",
            },
            Object {
              "customDisplayGroupName": "Custom Name Ignored",
              "displayGroup": "Group 1",
              "name": "test3",
              "type": "html",
            },
          ],
        },
        Object {
          "htmlOnly": false,
          "key": "Group 2",
          "label": null,
          "properties": Array [
            Object {
              "displayGroup": "Group 2",
              "label": "Test 3",
              "name": "test3",
            },
            Object {
              "displayGroup": "Group 2",
              "label": "Test 4",
              "name": "test4",
            },
          ],
        },
        Object {
          "htmlOnly": true,
          "key": "custom-Custom Name",
          "label": "Custom Name",
          "properties": Array [
            Object {
              "customDisplayGroupName": "Custom Name",
              "displayGroup": "custom",
              "name": "html",
              "type": "html",
            },
          ],
        },
      ]
    }
  />
</div>
`;

exports[`<Content /> should render simple rows if not in beta 1`] = `
<Wrapper
  dense={false}
  groupName=""
  htmlOnly={false}
>
  <Rows
    properties={
      Array [
        Object {
          "displayGroup": "Group 1",
          "label": "Test 1",
          "name": "test1",
        },
        Object {
          "displayGroup": "Group 1",
          "label": "Test 2",
          "name": "test2",
        },
        Object {
          "customDisplayGroupName": "Custom Name Ignored",
          "displayGroup": "Group 1",
          "name": "test3",
          "type": "html",
        },
        Object {
          "displayGroup": "Group 2",
          "label": "Test 3",
          "name": "test3",
        },
        Object {
          "displayGroup": "Group 2",
          "label": "Test 4",
          "name": "test4",
        },
        Object {
          "customDisplayGroupName": "Custom Name",
          "displayGroup": "custom",
          "name": "html",
          "type": "html",
        },
      ]
    }
  />
</Wrapper>
`;

exports[`<Content /> should render simple rows of no groups could be found 1`] = `
<Wrapper
  dense={false}
  groupName=""
  htmlOnly={false}
>
  <Rows
    properties={
      Array [
        Object {
          "label": "Test 1",
          "name": "test1",
        },
      ]
    }
  />
</Wrapper>
`;
